welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var nbPas=0
def haveBaggle():Boolean = {
def vuBiscuit():Boolean = {
while(!estSurBiscuit()&&nbPas<7){
	avance();
	nbPas=nbPas+1;
	return 
}
}
}
